prusti-tests/tests/verify/fail/no-annotations/never-type.rs
#![feature(never_type)]

fn diverging() -> ! {
    panic!();  //~ ERROR panic!(..) statement might be reachable
}

fn main() {}
